# jj-dojo

./: .bazelrc  .gitignore  .prettierrc.js  .yamllint.yaml  BUILD.bazel  CHANGELOG.md  DEVELOPMENT.md  MODULE.bazel  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: _test_run.yaml  lint.yaml  test-postsubmit.yaml  test.yaml
docs/: code-of-conduct.md  contributing.md
lib/error/: error.ts
lib/logging/: feedback.ts  logger.ts  logging.test.ts  logging.ts  output_channel_logger.ts
scripts/: populate_vscode_enum.py
spec/support/: jasmine.json
src/: extension.test.ts  extension.ts  extension_test.ts
src/fakes/: fake_extension.ts  fake_extension_context.ts  fake_log_output_channel.ts  fake_vscode.ts  fakes.ts  unimplemented.ts
src/logging/: error_callback.ts  logger.ts  logging.test.ts  logging_test.ts  output_channel_logger.ts
src/testing/: fakes.ts  install_global_vscode.ts  install_vscode.ts  vscode_module_mock.ts  vscode_test.ts
src/testing/custom_fakes/: fake_cancellation_token_source.ts  fake_code_lens.ts  fake_commands.ts  fake_disposable.ts  fake_event_emitter.ts  fake_languages.ts  fake_log_output_channel.ts  fake_position.ts  fake_range.ts  fake_selection.ts  fake_theme_color.ts  fake_vscode.ts  fake_window.ts  fake_workspace.ts  unimplemented.ts
src/testing/google_fakes/: fake_environment_variable_collection.ts  fake_extension.ts  fake_extension_context.ts  fake_language_model_access_information.ts  fake_memento.ts  fake_secret_storage.ts  fake_text_document.ts
src/ui/: ui.ts
src/ui/merge_conflict/: activate.ts  codelens.ts  codelens_test.ts  commands.ts  decorator.ts  decorator_test.ts  parser.ts  parser_test.ts  resolver.ts  resolver_test.ts  tracker.ts
src/utils/: hashmap.test.ts  hashmap.ts  hashmap_test.ts  hashset.ts
