load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_project(
    name = "compile",
    srcs = glob(
        [
            "src/**/*.ts",
            "lib/**/*.ts",
        ],
        exclude = [
            "src/fakes/**",
        ],
    ),
    composite = True,
    out_dir = "out",
    root_dir = ".",
    source_map = True,
    transpiler = "tsc",
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules",
    ],
)

js_library(
    name = "extension",
    srcs = [
        "package.json",
        ":compile",
    ],
)
