# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:jasmine/package_json.bzl", jasmine_bin = "bin")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_project(
    name = "compile",
    srcs = glob(
        [
            "src/**/*.ts",
        ],
        exclude = [
            "src/testing/**",
            "src/**/*_test.ts",
        ],
    ),
    composite = True,
    out_dir = "out",
    root_dir = ".",
    source_map = True,
    transpiler = "tsc",
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules",
    ],
)

ts_project(
    name = "compile_test",
    srcs = glob(
        [
            "src/testing/**/*.ts",
            "src/**/*_test.ts",
            "third_party/**/*.ts",
        ],
    ),
    composite = True,
    out_dir = "out",
    root_dir = ".",
    source_map = True,
    transpiler = "tsc",
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules",
        ":compile",
    ],
)


js_library(
    name = "extension",
    srcs = [
        "package.json",
        ":compile",
    ],
)

jasmine_bin.jasmine_test(
    name = "test",
    size = "small",
    args = [
        "--config=spec/support/jasmine.json",
    ],
    chdir = package_name(),
    data = [
        "package.json",
        "tsconfig.json",
        "spec/support/jasmine.json",
        "//:node_modules",
        ":compile",
        ":compile_test",
    ],
)

alias(
    name = "pnpm",
    actual = "@pnpm//:pnpm",
)
